--- a/src/index.css
+++ b/src/index.css
@@ -24,20 +24,23 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
+body {
+  background-color: #000;
+}
 .fade-appear,
 .fade-enter {
-  opacity: 1;
-  z-index: 1;
+  opacity: 0;
+  /* z-index: 1; */
 }
 .fade-appear-active,
 .fade-enter.fade-enter-active {
   opacity: 1;
-  transition: opacity 450ms linear 250ms;
+  transition: opacity 250ms linear 50ms;
 }
 .fade-exit {
-  opacity: 0;
+  opacity: 1;
 }
 .fade-exit.fade-exit-active {
-  opacity: 1;
-  transition: opacity 150ms linear;
+  opacity: 0;
+  transition: opacity 10ms linear;
 }
